# rpc/model/jwksmodel/jwkspublicmodel_gen.go
@@ -1,133 +1,0 @@
-// Code generated by goctl. DO NOT EDIT!
-
-package jwksmodel
-
-import (
-	"context"
-	"database/sql"
-	"github.com/SpectatorNan/gorm-zero/gormc"
-
-	"github.com/SpectatorNan/gorm-zero/gormc/pagex"
-	"gorm.io/gorm"
-)
-
-type (
-	jwksPublicModel interface {
-		Insert(ctx context.Context, tx *gorm.DB, data *JwksPublic) error
-		BatchInsert(ctx context.Context, tx *gorm.DB, news []JwksPublic) error
-		FindOne(ctx context.Context, id int64) (*JwksPublic, error)
-		FindPageList(ctx context.Context, page *pagex.ListReq, orderBy pagex.OrderBy,
-			orderKeys map[string]string, whereClause func(db *gorm.DB) *gorm.DB) ([]JwksPublic, int64, error)
-		Update(ctx context.Context, tx *gorm.DB, data *JwksPublic) error
-		BatchUpdate(ctx context.Context, tx *gorm.DB, olds, news []JwksPublic) error
-		BatchDelete(ctx context.Context, tx *gorm.DB, datas []JwksPublic) error
-
-		Delete(ctx context.Context, tx *gorm.DB, id int64) error
-	}
-
-	defaultJwksPublicModel struct {
-		conn  *gorm.DB
-		table string
-	}
-
-	JwksPublic struct {
-		Id         int64          `gorm:"column:id;primary_key"`
-		PublicKey  string         `gorm:"column:public_key"`
-		PrivateKey string         `gorm:"column:private_key"`
-		CreatedAt  sql.NullTime   `gorm:"column:created_at"`
-		UpdatedAt  sql.NullTime   `gorm:"column:updated_at"`
-		DeletedAt  gorm.DeletedAt `gorm:"column:deleted_at;index"`
-	}
-)
-
-func (JwksPublic) TableName() string {
-	return `"public"."jwks_public"`
-}
-
-func newJwksPublicModel(db *gorm.DB) *defaultJwksPublicModel {
-	return &defaultJwksPublicModel{
-		conn:  db,
-		table: `"public"."jwks_public"`,
-	}
-}
-
-func (m *defaultJwksPublicModel) Insert(ctx context.Context, tx *gorm.DB, data *JwksPublic) error {
-	db := m.conn
-	if tx != nil {
-		db = tx
-	}
-	err := db.WithContext(ctx).Create(&data).Error
-	return err
-}
-func (m *defaultJwksPublicModel) BatchInsert(ctx context.Context, tx *gorm.DB, news []JwksPublic) error {
-	db := m.conn
-	if tx != nil {
-		db = tx
-	}
-	err := db.Create(&news).Error
-	return err
-}
-
-func (m *defaultJwksPublicModel) FindOne(ctx context.Context, id int64) (*JwksPublic, error) {
-	var resp JwksPublic
-	err := m.conn.WithContext(ctx).Model(&JwksPublic{}).Where("id = ?", id).Take(&resp).Error
-	switch err {
-	case nil:
-		return &resp, nil
-	case gormc.ErrNotFound:
-		return nil, ErrNotFound
-	default:
-		return nil, err
-	}
-}
-func (m *defaultJwksPublicModel) FindPageList(ctx context.Context, page *pagex.ListReq, orderBy pagex.OrderBy,
-	orderKeys map[string]string, whereClause func(db *gorm.DB) *gorm.DB) ([]JwksPublic, int64, error) {
-	conn := m.conn
-	formatDB := func() (*gorm.DB, *gorm.DB) {
-		db := conn.Model(&JwksPublic{})
-		if whereClause != nil {
-			db = whereClause(db)
-		}
-		return db, nil
-	}
-
-	res, total, err := pagex.FindPageListWithCount[JwksPublic](ctx, page, orderBy, orderKeys, formatDB)
-	return res, total, err
-}
-
-func (m *defaultJwksPublicModel) Update(ctx context.Context, tx *gorm.DB, data *JwksPublic) error {
-	db := m.conn
-	if tx != nil {
-		db = tx
-	}
-	err := db.WithContext(ctx).Save(data).Error
-	return err
-}
-func (m *defaultJwksPublicModel) BatchUpdate(ctx context.Context, tx *gorm.DB, olds, news []JwksPublic) error {
-	db := m.conn
-	if tx != nil {
-		db = tx
-	}
-	err := db.WithContext(ctx).Save(&news).Error
-
-	return err
-}
-
-func (m *defaultJwksPublicModel) Delete(ctx context.Context, tx *gorm.DB, id int64) error {
-	db := m.conn
-	if tx != nil {
-		db = tx
-	}
-	err := db.WithContext(ctx).Delete(&JwksPublic{}, id).Error
-
-	return err
-}
-
-func (m *defaultJwksPublicModel) BatchDelete(ctx context.Context, tx *gorm.DB, datas []JwksPublic) error {
-	db := m.conn
-	if tx != nil {
-		db = tx
-	}
-	err := db.Delete(&datas).Error
-	return err
-}
